# xiyan_mcp_server

./: Dockerfile  README.md  README_ja.md  README_zh.md  config_demo.yml  pyproject.toml  requirements.txt  setup.py  smithery.yaml
src/xiyan_mcp_server/: __init__.py  __main__.py  database_env.py  local_xiyan_server.py  server.py
src/xiyan_mcp_server/local_model/: README.md
src/xiyan_mcp_server/utils/: db_config.py  db_mschema.py  db_source.py  db_util.py  file_util.py  llm_util.py
